--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "paragonie/constant_time_encoding": "^2.0",
-        "pragmarx/google2fa": "^1.0"
+        "pragmarx/google2fa": "^1.0",
+        "laravelcollective/html": "~5.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
