--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,13 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "consoletvs/charts": "4.",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
+        "laravelcollective/html": "~5.0",
         "paragonie/constant_time_encoding": "^2.0",
         "pragmarx/google2fa": "^1.0",
-        "laravelcollective/html": "~5.0"
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
